SERVER-77694 Import immer lib from fork containing fix to always enable exceptions